commit translated contents

--- a/articles/index.yml
+++ b/articles/index.yml
@@ -3,55 +3,91 @@ title: Microsoft Quantum 文档
 summary: 了解如何使用 Microsoft Quantum 开发工具包和量子算法语言 Q#。 了解关键概念并编写你的第一个量子程序。
 metadata:
   title: Microsoft Quantum 文档 - Q# API 参考
-  description: 了解如何使用 Microsoft Quantum 开发工具包和量子算法语言 Q#。 了解关键概念并编写你的第一个量子程序。
+  description: 了解如何使用 Microsoft Quantum 开发人员工具包和量子编程语言 Q#。 了解关键概念并编写你的第一个量子程序。  探索 QDK 的丰富工具和库。
   ms.prod: quantum
   ms.topic: landing-page
   ms.collection: collection
   author: cjgronlund
   ms.author: cgronlun
-  ms.date: 09/30/2019
-  ms.openlocfilehash: 692456cb6b117b206d202b01967202b7ac89e59d
-  ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
+  ms.date: 10/21/2019
+  ms.openlocfilehash: f757c99b1f5b1a821c9c341c442e1080378949a8
+  ms.sourcegitcommit: aa5e6f4a2deb4271a333d3f1b1eb69b5bb9a7bad
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/30/2019
-  ms.locfileid: "73065055"
+  ms.lasthandoff: 11/02/2019
+  ms.locfileid: "73442511"
 landingContent:
 - title: Microsoft Quantum 入门
   linkLists:
   - linkListType: overview
     links:
-    - text: 欢迎使用 Microsoft Quantum 开发人员工具包
+    - text: 关于量子计算的五个问题
       url: welcome.md
   - linkListType: get-started
     links:
-    - text: 安装 QDK
-      url: install-guide/index.md
-    - text: 更新 QDK
-      url: install-guide/update.md
-  - linkListType: quickstart
-    links:
-    - text: 编写第一个量子程序
+    - text: 生成量子随机数生成器
+      url: quickstarts/qrng.md
+    - text: Q# 的量子基础知识
       url: quickstart.md
-- title: 学习量子计算
-  linkLists:
-  - linkListType: concept
+    - text: 了解如何使用 Q# 编写作用巨大的量子程序
+      url: quickstarts/search.md
+    - text: 了解如何解决化学领域的最大挑战
+      url: https://cloudblogs.microsoft.com/quantum/2018/12/04/simulating-nature-with-the-new-microsoft-quantum-development-kit-chemistry-library/
+  - linkListType: learn
     links:
-    - text: 什么是量子计算？
-      url: concepts/index.md
-    - text: 向量和矩阵
-      url: concepts/vectors-and-matrices.md
-    - text: 高级矩阵概念
-      url: concepts/advanced-matrices.md
-    - text: 量子位
-      url: concepts/the-qubit.md
-    - text: 软件堆栈
-      url: concepts/software-stack.md
-- title: 量子开发技术
+    - text: 了解如何使用 Quantum Katas
+      url: intro-to-katas.md
+    - text: '浏览 Q # 示例'
+      url: https://docs.microsoft.com/samples/browse/?languages=qsharp
+- title: 使用 Q#、Python 或 Jupyter Notebook 进行开发
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 什么是 Q#？
+    - text: Python 安装
+      url: install-guide/index.md#develop-with-python
+    - text: Jupyter 安装
+      url: install-guide/index.md#develop-with-jupyter-notebooks
+  - linkListType: how-to-guide
+    links:
+    - text: 使用 Python 运行 Q# 示例
+      url: https://docs.microsoft.com/samples/browse/?languages=python&products=qdk
+    - text: 传送 Q# Jupyter 笔记本
+      url: https://docs.microsoft.com/samples/microsoft/quantum/quantum-teleportation/
+    - text: 如何构建 Q# Jupyter 笔记本
+      url: https://docs.microsoft.com/samples/microsoft/quantum/intro-to-qsharp-jupyter/
+- title: Q# 开发环境
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Visual Studio 安装
+      url: install-guide/index.md#develop-with-c-on-windows-using-visual-studio
+    - text: Visual Studio Code 安装
+      url: install-guide/index.md#develop-with-c-using-visual-studio-code
+- title: Q# 示例
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: 三个简单算法
+      url: https://docs.microsoft.com/samples/microsoft/quantum/simple-quantum-algorithms
+    - text: 使用 Grover 算法进行搜索
+      url: https://docs.microsoft.com/samples/microsoft/quantum/searching-with-grovers-algorithm
+    - text: 量子隐形传送
+      url: https://docs.microsoft.com/samples/microsoft/quantum/quantum-teleportation/
+    - text: 所有示例
+      url: https://docs.microsoft.com/samples/browse/?languages=qsharp
+- title: Q# 语言和开发技术
+  linkLists:
+  - linkListType: learn
+    links:
+    - text: Q# 语言介绍
+      url: language/index.md
+  - linkListType: how-to-guide
+    links:
+    - text: 量子模拟器和主机应用程序
+      url: machines/index.md
+  - linkListType: how-to-guide
+    links:
+    - text: Q# 编程概述
       url: techniques/file-structure.md
     - text: 运算和函数
       url: techniques/operations-and-functions.md
@@ -61,39 +97,51 @@ landingContent:
       url: techniques/working-with-qubits.md
     - text: 组合量子：隐形传送
       url: techniques/putting-it-all-together.md
-- title: 管理计算机和驱动程序
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: 经典驱动程序和计算机
-      url: machines/index.md
-    - text: QDK 完全状态模拟器
-      url: machines/full-state-simulator.md
-    - text: 资源估算器
-      url: machines/resources-estimator.md
-    - text: 量子跟踪模拟器
-      url: machines/qc-trace-simulator/index.md
-    - text: QDK Toffoli 模拟器
-      url: machines/toffoli-simulator.md
-- title: Q# 语言和库
+- title: 量子计算概念
   linkLists:
   - linkListType: concept
     links:
-    - text: Q# 语言介绍
-      url: language/index.md
-    - text: 发行说明
-      url: relnotes/index.md
+    - text: 量子计算概念
+      url: concepts/index.md
+    - text: 术语表
+      url: Glossary.md
+- title: Q# 算法和应用程序
+  linkLists:
+  - linkListType: reference
+    links:
+    - text: 振幅放大
+      url: libraries/standard/algorithms.md
+    - text: 量子相位估计
+      url: libraries/standard/algorithms.md#quantum-phase-estimation
+    - text: 秀尔算法
+      url: libraries/standard/applications.md#shors-algorithm
+    - text: 哈密顿模拟
+      url: libraries/standard/applications.md
+- title: Q# 库
+  linkLists:
   - linkListType: reference
     links:
     - text: 标准库
       url: libraries/standard/index.md
-    - text: 化学库
-      url: libraries/chemistry/index.md
     - text: 数字库
       url: libraries/numerics/index.md
-  - linkListType: reference
+    - text: 化学库
+      url: libraries/chemistry/index.md
+    - text: 化学概念
+      url: libraries/chemistry/concepts/quantum-dynamics.md
+  - linkListType: how-to-guide
     links:
-    - text: Q# 参考
-      url: https://docs.microsoft.com/qsharp/api/qsharp/microsoft.quantum.bitwise?view=qsharp-preview
-    - text: C# 组件
-      url: https://docs.microsoft.com/dotnet/api/microsoft.quantum.simulation.simulators.qctracesimulators?view=quantum-dotnet-latest
+    - text: 数字 Q# 示例
+      url: libraries/numerics/numerics.md
+    - text: 化学 Q# 示例
+      url: libraries/chemistry/samples/index.md
+    - text: NWChem 端到端
+      url: libraries/chemistry/samples/end-to-end.md
+- title: 社区和贡献
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: 参与编写 QDK
+      url: contributing/index.md
+    - text: 阅读 Microsoft Quantum 博客
+      url: https://cloudblogs.microsoft.com/quantum
