--- a/articles/TOC.yml
+++ b/articles/TOC.yml
@@ -1,15 +1,39 @@
 - name: Microsoft Quantum 文档
   href: index.yml
 - name: 概述
-  href: welcome.md
+  items:
+    - name: 入门
+      href: welcome.md
+    - name: 关于量子计算的五个问题
+      items:
+        - name: 什么是量子计算？
+          href: overview/what-is-quantum-computing.md
+        - name: 量子计算机有何用途？
+          href: overview/quantum-computers.md
+        - name: 为何学习量子计算？
+          href: overview/why-learn-quantum-computing.md
+        - name: '什么是 Q#？'
+          href: overview/what-is-qsharp.md
+        - name: 如何学习量子计算？
+          href: overview/how-to-learn-quantum-computing.md
+    - name: 了解如何使用 Quantum Katas
+      href: intro-to-katas.md
 - name: 快速入门
+  items:
+    - name: 量子随机数生成器
+      href: quickstarts/qrng.md
+    - name: 'Q# 的量子基础知识'
+      href: quickstart.md
+    - name: 实现 Grover 的搜索算法
+      href: quickstarts/search.md
+- name: 操作指南
   items:
     - name: 安装 QDK
       href: install-guide/index.md
     - name: 更新 QDK
       href: install-guide/update.md
-    - name: 编写第一个量子程序
-      href: quickstart.md
+    - name: '创建 Q# 项目'
+      href: how-to-guides/create-qsharp-project.md
 - name: 概念
   items:
     - name: 量子开发技术
@@ -22,7 +46,7 @@
       href: libraries/toc.yml
     - name: 量子计算概念
       href: concepts/toc.yml
-    - name: 如何托管量子计算机
+    - name: 量子模拟器和资源估算器
       href: machines/toc.yml
 - name: 资源
   items:
