--- a/api/qsharp/microsoft.quantum.canon.operationpowc.yml
+++ b/api/qsharp/microsoft.quantum.canon.operationpowc.yml
@@ -51,9 +51,10 @@ typeParameters:
   summary: 要为其提供支持的操作的类型。
 seeAlso:
 - microsoft.quantum.canon.operationpow
-ms.openlocfilehash: 5bc317597ef660bf92291b690fdb2d255eaaa616
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230800"
+metadata:
+  ms.openlocfilehash: 5bc317597ef660bf92291b690fdb2d255eaaa616
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230800"
