--- a/api/qsharp/microsoft.quantum.canon.uncurriedop.yml
+++ b/api/qsharp/microsoft.quantum.canon.uncurriedop.yml
@@ -50,9 +50,10 @@ seeAlso:
 - microsoft.quantum.canon.uncurryopc
 - microsoft.quantum.canon.uncurryopa
 - microsoft.quantum.canon.uncurryopca
-ms.openlocfilehash: ebd2c277eee73f8920804ae79815c3b482a3d39b
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216996"
+metadata:
+  ms.openlocfilehash: ebd2c277eee73f8920804ae79815c3b482a3d39b
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216996"
