--- a/api/qsharp/microsoft.quantum.characterization.singlequbitprocesstomographymeasurement.yml
+++ b/api/qsharp/microsoft.quantum.characterization.singlequbitprocesstomographymeasurement.yml
@@ -37,9 +37,10 @@ output:
       \end{align} $ $
     isPrimitive: true
     uid: Result
-ms.openlocfilehash: 48da4cd4d16a3466591c0c93710eed6b27a68fab
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73229015"
+metadata:
+  ms.openlocfilehash: 48da4cd4d16a3466591c0c93710eed6b27a68fab
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73229015"
