--- a/api/qsharp/microsoft.quantum.convert.doubleasstringwithformat.yml
+++ b/api/qsharp/microsoft.quantum.convert.doubleasstringwithformat.yml
@@ -20,9 +20,10 @@ output:
   types:
   - isPrimitive: true
     uid: String
-ms.openlocfilehash: 77ee195da86e00c017c7eca184a00d7fdf31f592
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233673"
+metadata:
+  ms.openlocfilehash: 77ee195da86e00c017c7eca184a00d7fdf31f592
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233673"
