--- a/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactcp.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactcp.yml
@@ -19,9 +19,10 @@ output:
   types:
   - isPrimitive: true
     uid: Unit
-ms.openlocfilehash: 70df5b87bb44a8e92429bdb518178a98d7704619
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230511"
+metadata:
+  ms.openlocfilehash: 70df5b87bb44a8e92429bdb518178a98d7704619
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230511"
