--- a/api/qsharp/microsoft.quantum.canon.delay.yml
+++ b/api/qsharp/microsoft.quantum.canon.delay.yml
@@ -50,9 +50,10 @@ seeAlso:
 - microsoft.quantum.canon.delaya
 - microsoft.quantum.canon.delayca
 - microsoft.quantum.canon.delayed
-ms.openlocfilehash: 1759670182cff1153859c62e9c95d1be1f998674
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226108"
+metadata:
+  ms.openlocfilehash: 1759670182cff1153859c62e9c95d1be1f998674
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226108"
