--- a/api/qsharp/microsoft.quantum.canon.delayca.yml
+++ b/api/qsharp/microsoft.quantum.canon.delayca.yml
@@ -52,9 +52,10 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.delay
 - microsoft.quantum.canon.delayed
-ms.openlocfilehash: ec419d56854c8398502a29e2d178da5608c1c592
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73219648"
+metadata:
+  ms.openlocfilehash: ec419d56854c8398502a29e2d178da5608c1c592
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73219648"
