--- a/api/qsharp/microsoft.quantum.canon.modularaddproductphasele.yml
+++ b/api/qsharp/microsoft.quantum.canon.modularaddproductphasele.yml
@@ -32,9 +32,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: a88de7f710a8d2b7741cc593625c2bef944e4b45
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73222929"
+metadata:
+  ms.openlocfilehash: a88de7f710a8d2b7741cc593625c2bef944e4b45
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73222929"
