--- a/api/qsharp/microsoft.quantum.canon.restrictedtosubregisterc.yml
+++ b/api/qsharp/microsoft.quantum.canon.restrictedtosubregisterc.yml
@@ -47,9 +47,10 @@ output:
     - Controlled
 seeAlso:
 - microsoft.quantum.canon.restrictedtosubregister
-ms.openlocfilehash: a844fd6b192d0f008c82883b040e0ffaea2f5a98
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73220447"
+metadata:
+  ms.openlocfilehash: a844fd6b192d0f008c82883b040e0ffaea2f5a98
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73220447"
