--- a/api/qsharp/microsoft.quantum.convert.boolarrayaspauli.yml
+++ b/api/qsharp/microsoft.quantum.convert.boolarrayaspauli.yml
@@ -28,9 +28,10 @@ output:
   - isArray: true
     isPrimitive: true
     uid: Pauli
-ms.openlocfilehash: 3d251215e7f7bc136092caf7bafd677ecb1c05bd
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227179"
+metadata:
+  ms.openlocfilehash: 3d251215e7f7bc136092caf7bafd677ecb1c05bd
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227179"
