--- a/api/qsharp/microsoft.quantum.convert.rangeasintarray.yml
+++ b/api/qsharp/microsoft.quantum.convert.rangeasintarray.yml
@@ -27,9 +27,10 @@ output:
     isArray: true
     isPrimitive: true
     uid: Int
-ms.openlocfilehash: a6765698daf8838312c1501e8bbf1e43f609b068
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73232330"
+metadata:
+  ms.openlocfilehash: a6765698daf8838312c1501e8bbf1e43f609b068
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73232330"
