--- a/api/qsharp/microsoft.quantum.diagnostics.allequalityfactb.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.allequalityfactb.yml
@@ -27,9 +27,10 @@ output:
   types:
   - isPrimitive: true
     uid: Unit
-ms.openlocfilehash: ebda74cfe793c2c5ec8411f893aa852f9e091728
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227145"
+metadata:
+  ms.openlocfilehash: ebda74cfe793c2c5ec8411f893aa852f9e091728
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227145"
