--- a/api/qsharp/microsoft.quantum.diagnostics.assertqubit.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.assertqubit.yml
@@ -24,9 +24,10 @@ output:
     uid: Unit
 seeAlso:
 - assertqubitisinstatewithintolerance
-ms.openlocfilehash: e926e8a106e7ef0999f30d00922394e611aa40a8
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227162"
+metadata:
+  ms.openlocfilehash: e926e8a106e7ef0999f30d00922394e611aa40a8
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227162"
