--- a/api/qsharp/microsoft.quantum.diagnostics.dumpmachine.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.dumpmachine.yml
@@ -25,9 +25,10 @@ output:
   - summary: 无。
     isPrimitive: true
     uid: Unit
-ms.openlocfilehash: 7d268127c56dc5554e7c99494ae90b2bc14b336c
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73227060"
+metadata:
+  ms.openlocfilehash: 7d268127c56dc5554e7c99494ae90b2bc14b336c
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73227060"
