--- a/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactd.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactd.yml
@@ -22,9 +22,10 @@ output:
   types:
   - isPrimitive: true
     uid: Unit
-ms.openlocfilehash: 9bbf1ced753b2fde5a3f8fb20417053a47866ada
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230494"
+metadata:
+  ms.openlocfilehash: 9bbf1ced753b2fde5a3f8fb20417053a47866ada
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230494"
