--- a/api/qsharp/microsoft.quantum.extensions.convert.biginttobools.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.biginttobools.yml
@@ -23,9 +23,10 @@ output:
   - isArray: true
     isPrimitive: true
     uid: Bool
-ms.openlocfilehash: bc1dab8febe7ebd0b6ebfeb17ebb7c9bb1f9fa30
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73234336"
+metadata:
+  ms.openlocfilehash: bc1dab8febe7ebd0b6ebfeb17ebb7c9bb1f9fa30
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73234336"
