--- a/api/qsharp/microsoft.quantum.extensions.convert.boolstobigint.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.boolstobigint.yml
@@ -23,9 +23,10 @@ output:
   types:
   - isPrimitive: true
     uid: BigInt
-ms.openlocfilehash: 316176ba20d8cf5f4cdb2bd2e62f15f5c3d1c690
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73234302"
+metadata:
+  ms.openlocfilehash: 316176ba20d8cf5f4cdb2bd2e62f15f5c3d1c690
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73234302"
