--- a/api/qsharp/microsoft.quantum.extensions.convert.pauliarraytoint.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.pauliarraytoint.yml
@@ -23,9 +23,10 @@ output:
   types:
   - isPrimitive: true
     uid: Int
-ms.openlocfilehash: 7bc968152b077ee8bd97e0743c70f148a2d49c31
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73234268"
+metadata:
+  ms.openlocfilehash: 7bc968152b077ee8bd97e0743c70f148a2d49c31
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73234268"
