--- a/api/qsharp/microsoft.quantum.extensions.convert.tostringb.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.tostringb.yml
@@ -22,9 +22,10 @@ output:
   types:
   - isPrimitive: true
     uid: String
-ms.openlocfilehash: a40adc497cc6e3d31c73a65f49326459c48773fa
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73232126"
+metadata:
+  ms.openlocfilehash: a40adc497cc6e3d31c73a65f49326459c48773fa
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73232126"
