--- a/api/qsharp/microsoft.quantum.extensions.testing.assertallzero.yml
+++ b/api/qsharp/microsoft.quantum.extensions.testing.assertallzero.yml
@@ -26,9 +26,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: ef6f253a20026f59f8fbe69dc4ee11fd1ad8bf13
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73235747"
+metadata:
+  ms.openlocfilehash: ef6f253a20026f59f8fbe69dc4ee11fd1ad8bf13
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73235747"
