--- a/api/qsharp/microsoft.quantum.intrinsic.rfrac.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.rfrac.yml
@@ -52,9 +52,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: 10795932b7057ccf58d2219208af2750eff0e363
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216486"
+metadata:
+  ms.openlocfilehash: 10795932b7057ccf58d2219208af2750eff0e363
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216486"
