--- a/api/qsharp/microsoft.quantum.intrinsic.swap.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.swap.yml
@@ -44,9 +44,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: 32a379b784d0be0084b00a80edf8607ccf760f9e
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216350"
+metadata:
+  ms.openlocfilehash: 32a379b784d0be0084b00a80edf8607ccf760f9e
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216350"
