--- a/api/qsharp/microsoft.quantum.intrinsic.z.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.z.yml
@@ -26,9 +26,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: 92ad2d6b8f4b0a715591fde6721c425daf629cff
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233384"
+metadata:
+  ms.openlocfilehash: 92ad2d6b8f4b0a715591fde6721c425daf629cff
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233384"
