--- a/api/qsharp/microsoft.quantum.logical.and.yml
+++ b/api/qsharp/microsoft.quantum.logical.and.yml
@@ -36,9 +36,10 @@ output:
   - summary: 当且仅当 `a` 和 `b` 都 `true`时，`true`。
     isPrimitive: true
     uid: Bool
-ms.openlocfilehash: 22e884f8041ecd66aba875c38f0b8af234aee0e5
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233367"
+metadata:
+  ms.openlocfilehash: 22e884f8041ecd66aba875c38f0b8af234aee0e5
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233367"
