--- a/api/qsharp/microsoft.quantum.math.bigfraction.yml
+++ b/api/qsharp/microsoft.quantum.math.bigfraction.yml
@@ -5,9 +5,10 @@ type: newtype
 namespace: Microsoft.Quantum.Math
 summary: 表示 `p/q`形式的有理数。 整数 `p` 是元组的第一个元素，`q` 是元组的第二个元素。
 syntax: newtype BigFraction = (BigInt, BigInt);
-ms.openlocfilehash: 641939304a0846c6de4b200f87c28546278005e6
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230205"
+metadata:
+  ms.openlocfilehash: 641939304a0846c6de4b200f87c28546278005e6
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230205"
