--- a/api/qsharp/microsoft.quantum.math.bitsizei.yml
+++ b/api/qsharp/microsoft.quantum.math.bitsizei.yml
@@ -22,9 +22,10 @@ output:
   - summary: '`a`的位大小。'
     isPrimitive: true
     uid: Int
-ms.openlocfilehash: 5faf7961011c666b333cc9befc3da9af4872330d
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73230171"
+metadata:
+  ms.openlocfilehash: 5faf7961011c666b333cc9befc3da9af4872330d
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73230171"
