--- a/api/qsharp/microsoft.quantum.math.expd.yml
+++ b/api/qsharp/microsoft.quantum.math.expd.yml
@@ -17,9 +17,10 @@ output:
   types:
   - isPrimitive: true
     uid: Double
-ms.openlocfilehash: 5dfea05371595ee0c8dffe251f168b3f4e7c3750
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73229525"
+metadata:
+  ms.openlocfilehash: 5dfea05371595ee0c8dffe251f168b3f4e7c3750
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73229525"
