--- a/api/qsharp/microsoft.quantum.math.minl.yml
+++ b/api/qsharp/microsoft.quantum.math.minl.yml
@@ -20,9 +20,10 @@ output:
   types:
   - isPrimitive: true
     uid: BigInt
-ms.openlocfilehash: fabf3d5a925466481bd29007e208eb147b090f8d
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73232466"
+metadata:
+  ms.openlocfilehash: fabf3d5a925466481bd29007e208eb147b090f8d
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73232466"
