--- a/api/qsharp/microsoft.quantum.math.modl.yml
+++ b/api/qsharp/microsoft.quantum.math.modl.yml
@@ -22,9 +22,10 @@ output:
   - summary: 取模 $a \bmod b $。
     isPrimitive: true
     uid: BigInt
-ms.openlocfilehash: 7431cc366b8c8e592008d2787a58e45d101dd2e6
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233707"
+metadata:
+  ms.openlocfilehash: 7431cc366b8c8e592008d2787a58e45d101dd2e6
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233707"
