--- a/api/qsharp/microsoft.quantum.math.modulusl.yml
+++ b/api/qsharp/microsoft.quantum.math.modulusl.yml
@@ -23,9 +23,10 @@ output:
   - summary: 0到 `value - r` `modulus - 1` 之间的整数 $r
     isPrimitive: true
     uid: BigInt
-ms.openlocfilehash: 14ef3669e4c59912129c9ffac6ecbf1a2ed25534
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73232449"
+metadata:
+  ms.openlocfilehash: 14ef3669e4c59912129c9ffac6ecbf1a2ed25534
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73232449"
