--- a/api/qsharp/microsoft.quantum.math.signi.yml
+++ b/api/qsharp/microsoft.quantum.math.signi.yml
@@ -17,9 +17,10 @@ output:
   types:
   - isPrimitive: true
     uid: Int
-ms.openlocfilehash: bc4f780ee5151a3bb2569108bd3569a73f8a3895
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73223694"
+metadata:
+  ms.openlocfilehash: bc4f780ee5151a3bb2569108bd3569a73f8a3895
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73223694"
