--- a/api/qsharp/microsoft.quantum.preparation.prepareidentity.yml
+++ b/api/qsharp/microsoft.quantum.preparation.prepareidentity.yml
@@ -24,9 +24,10 @@ output:
     uid: Unit
 seeAlso:
 - microsoft.quantum.canon.preparesinglequbitidentity
-ms.openlocfilehash: 3242bb0249f26e78ac33f0d16eb7b7c9dcd86ee8
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226601"
+metadata:
+  ms.openlocfilehash: 3242bb0249f26e78ac33f0d16eb7b7c9dcd86ee8
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226601"
