--- a/api/qsharp/microsoft.quantum.primitive.expfrac.yml
+++ b/api/qsharp/microsoft.quantum.primitive.expfrac.yml
@@ -36,9 +36,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: ac7ee4b82b473304f19d93af984ca9ddcbf3b227
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73223422"
+metadata:
+  ms.openlocfilehash: ac7ee4b82b473304f19d93af984ca9ddcbf3b227
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73223422"
