--- a/api/qsharp/microsoft.quantum.simulation.identitygeneratorsystem.yml
+++ b/api/qsharp/microsoft.quantum.simulation.identitygeneratorsystem.yml
@@ -13,9 +13,10 @@ output:
   types:
   - summary: Hamiltonian $H = $0 下表示进化的生成器系统。
     uid: microsoft.quantum.simulation.generatorsystem
-ms.openlocfilehash: c15d81a712c144f891a5a92fc56d859162049a6a
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216214"
+metadata:
+  ms.openlocfilehash: c15d81a712c144f891a5a92fc56d859162049a6a
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216214"
