commit translated contents

--- a/api/qsharp/microsoft.quantum.canon.applytosubregisterca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytosubregisterca.yml
@@ -46,9 +46,10 @@ functors:
 - Controlled
 seeAlso:
 - microsoft.quantum.canon.applytosubregister
-ms.openlocfilehash: c6cdf7445a37b4af1d585d13a7c1e379c1b96aaf
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73212865"
+metadata:
+  ms.openlocfilehash: c6cdf7445a37b4af1d585d13a7c1e379c1b96aaf
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73212865"
