--- a/api/qsharp/microsoft.quantum.canon.ccnotop.yml
+++ b/api/qsharp/microsoft.quantum.canon.ccnotop.yml
@@ -5,9 +5,10 @@ type: newtype
 namespace: Microsoft.Quantum.Canon
 summary: CCNOT 入口的签名类型。
 syntax: newtype CCNOTop = ((Qubit, Qubit, Qubit) => Unit is Adj);
-ms.openlocfilehash: 5e219ba46e8f281f26be9dbd4a4aaa9452aeffef
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/30/2019
-ms.locfileid: "73068132"
+metadata:
+  ms.openlocfilehash: 5e219ba46e8f281f26be9dbd4a4aaa9452aeffef
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73068132"
