--- a/api/qsharp/microsoft.quantum.canon.ccontrolleda.yml
+++ b/api/qsharp/microsoft.quantum.canon.ccontrolleda.yml
@@ -9,9 +9,9 @@ summary: >-
   修饰符 `A` 指示操作为 adjointable。
 syntax: "function CControlledA (op : ('T => Unit is Adj)) : ((Bool, 'T) => Unit is Adj)"
 input:
-  content: （op：（= = > 单位为形容词））
+  content: "(op : ('T => Unit is Adj))"
   types:
-  - name: 基金
+  - name: op
     summary: 要有条件地应用的操作。
     isOperation: true
     input:
@@ -25,7 +25,7 @@ input:
     functors:
     - Adjoint
 output:
-  content: （（Bool，t） = > 单位为形容词）
+  content: ((Bool, 'T) => Unit is Adj)
   types:
   - summary: 如果经典控制位为 true，则为 op 的新操作。
     isOperation: true
@@ -46,9 +46,10 @@ typeParameters:
   summary: 要有条件地应用的操作的输入类型。
 seeAlso:
 - microsoft.quantum.canon.ccontrolled
-ms.openlocfilehash: e02446273f93b51a228679d3eb75bf16a2526e8a
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/30/2019
-ms.locfileid: "73068098"
+metadata:
+  ms.openlocfilehash: e02446273f93b51a228679d3eb75bf16a2526e8a
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73068098"
