--- a/api/qsharp/microsoft.quantum.canon.transformedoperationc.yml
+++ b/api/qsharp/microsoft.quantum.canon.transformedoperationc.yml
@@ -62,9 +62,10 @@ seeAlso:
 - transformedoperationca
 - applywithinputtransformation
 - compose
-ms.openlocfilehash: 315c9aa76018490a58fcf9bbf93d4ef0e8410616
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73217047"
+metadata:
+  ms.openlocfilehash: 315c9aa76018490a58fcf9bbf93d4ef0e8410616
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73217047"
