--- a/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisorl.yml
+++ b/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisorl.yml
@@ -26,9 +26,10 @@ output:
       uid: BigInt
     - isPrimitive: true
       uid: BigInt
-ms.openlocfilehash: 0e3c6138d5efe03603338341e37a9cf7bc07fb47
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73233010"
+metadata:
+  ms.openlocfilehash: 0e3c6138d5efe03603338341e37a9cf7bc07fb47
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73233010"
