--- a/api/qsharp/microsoft.quantum.canon.applytofirstthreequbits.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstthreequbits.yml
@@ -46,9 +46,10 @@ seeAlso:
 - microsoft.quantum.canon.applytofirstthreequbitsc
 - microsoft.quantum.canon.applytofirstthreequbitsa
 - microsoft.quantum.canon.applytofirstthreequbitsca
-ms.openlocfilehash: 4b8c08d97d6131ad76758999d76b86d44d0263a4
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73213324"
+metadata:
+  ms.openlocfilehash: 4b8c08d97d6131ad76758999d76b86d44d0263a4
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73213324"
