--- a/api/qsharp/microsoft.quantum.canon.boundc.yml
+++ b/api/qsharp/microsoft.quantum.canon.boundc.yml
@@ -8,7 +8,7 @@ summary: >-
 
   修饰符 `C` 指示数组中的所有操作都可控制。
 examples: >-
-  The following are equivalent:
+  以下项是等效的：
 
 
   ```qsharp
@@ -30,9 +30,9 @@ examples: >-
   ```
 syntax: "function BoundC (operations : ('T => Unit is Ctl)[]) : ('T => Unit is Ctl)"
 input:
-  content: （操作：（t = > 单位为 Ctl） []）
+  content: "(operations : ('T => Unit is Ctl)[])"
   types:
-  - name: 操作
+  - name: operations
     summary: 要对给定输入执行的一系列操作。
     isArray: true
     isOperation: true
@@ -47,7 +47,7 @@ input:
     functors:
     - Controlled
 output:
-  content: （不等于 > 单位为 Ctl）
+  content: ('T => Unit is Ctl)
   types:
   - summary: 一项新的操作，它对其输入按顺序执行每个给定的操作。
     isOperation: true
@@ -66,9 +66,10 @@ typeParameters:
   summary: 数组中的每个操作的作用。
 seeAlso:
 - microsoft.quantum.canon.bound
-ms.openlocfilehash: 46a82065b3a236ad0e0a02894d6b1b3e2a1ceba1
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/30/2019
-ms.locfileid: "73068166"
+metadata:
+  ms.openlocfilehash: 46a82065b3a236ad0e0a02894d6b1b3e2a1ceba1
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73068166"
