--- a/api/qsharp/microsoft.quantum.canon.controlledonint.yml
+++ b/api/qsharp/microsoft.quantum.canon.controlledonint.yml
@@ -45,9 +45,10 @@ output:
     functors:
     - Adjoint
     - Controlled
-ms.openlocfilehash: 2d1951df7eca0d48246ac93518594f522221d882
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226176"
+metadata:
+  ms.openlocfilehash: 2d1951df7eca0d48246ac93518594f522221d882
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226176"
