--- a/api/qsharp/microsoft.quantum.canon.cz.yml
+++ b/api/qsharp/microsoft.quantum.canon.cz.yml
@@ -37,9 +37,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: 000bcb896589343372e415e5a7e628a0665bbc7d
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226159"
+metadata:
+  ms.openlocfilehash: 000bcb896589343372e415e5a7e628a0665bbc7d
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226159"
