--- a/api/qsharp/microsoft.quantum.canon.delayedca.yml
+++ b/api/qsharp/microsoft.quantum.canon.delayedca.yml
@@ -48,9 +48,10 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.delayed
 - microsoft.quantum.canon.delay
-ms.openlocfilehash: 4aafc97415ab5038a3bac11d1f976570fd3c5949
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73219427"
+metadata:
+  ms.openlocfilehash: 4aafc97415ab5038a3bac11d1f976570fd3c5949
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73219427"
