--- a/api/qsharp/microsoft.quantum.canon.intmax.yml
+++ b/api/qsharp/microsoft.quantum.canon.intmax.yml
@@ -25,9 +25,10 @@ output:
   types:
   - isPrimitive: true
     uid: Int
-ms.openlocfilehash: b5182222b350c4f994af849f76ba638aaa286907
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73223507"
+metadata:
+  ms.openlocfilehash: b5182222b350c4f994af849f76ba638aaa286907
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73223507"
