--- a/api/qsharp/microsoft.quantum.canon.multiplexoperations.yml
+++ b/api/qsharp/microsoft.quantum.canon.multiplexoperations.yml
@@ -47,9 +47,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: bd248ece9d76729a33db3dfead177fa68909f438
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73223490"
+metadata:
+  ms.openlocfilehash: bd248ece9d76729a33db3dfead177fa68909f438
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73223490"
