--- a/api/qsharp/microsoft.quantum.canon.resultarrfromboolarr.yml
+++ b/api/qsharp/microsoft.quantum.canon.resultarrfromboolarr.yml
@@ -24,9 +24,10 @@ output:
   - isArray: true
     isPrimitive: true
     uid: Result
-ms.openlocfilehash: 4fb5d7efee2e792b7b30ad3ac4d44b03e9be50e9
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73222419"
+metadata:
+  ms.openlocfilehash: 4fb5d7efee2e792b7b30ad3ac4d44b03e9be50e9
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73222419"
