--- a/api/qsharp/microsoft.quantum.canon.uncurryop.yml
+++ b/api/qsharp/microsoft.quantum.canon.uncurryop.yml
@@ -45,9 +45,10 @@ output:
       types:
       - isPrimitive: true
         uid: Unit
-ms.openlocfilehash: 120195e44151f3d7edd08ef152b0ee39ed40ff83
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216792"
+metadata:
+  ms.openlocfilehash: 120195e44151f3d7edd08ef152b0ee39ed40ff83
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216792"
