--- a/api/qsharp/microsoft.quantum.math.dividedbyl.yml
+++ b/api/qsharp/microsoft.quantum.math.dividedbyl.yml
@@ -22,9 +22,10 @@ output:
   - summary: 商 $a/b $。
     isPrimitive: true
     uid: BigInt
-ms.openlocfilehash: c0aec98a7d68be8d6d4de9a42f5e1bd6f8bc3ca1
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73229695"
+metadata:
+  ms.openlocfilehash: c0aec98a7d68be8d6d4de9a42f5e1bd6f8bc3ca1
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73229695"
