--- a/api/qsharp/microsoft.quantum.preparation.preparechoistateca.yml
+++ b/api/qsharp/microsoft.quantum.preparation.preparechoistateca.yml
@@ -40,9 +40,10 @@ functors:
 - Controlled
 seeAlso:
 - preparechoistate
-ms.openlocfilehash: bc0dfcb9edab6da0e089313a49f922859b6782d9
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226686"
+metadata:
+  ms.openlocfilehash: bc0dfcb9edab6da0e089313a49f922859b6782d9
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226686"
