--- a/api/qsharp/microsoft.quantum.preparation.prepareentangledstate.yml
+++ b/api/qsharp/microsoft.quantum.preparation.prepareentangledstate.yml
@@ -30,9 +30,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: 8bbd7a3a87a55a930fda18669f75dc9a98aee981
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226618"
+metadata:
+  ms.openlocfilehash: 8bbd7a3a87a55a930fda18669f75dc9a98aee981
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226618"
