--- a/api/qsharp/microsoft.quantum.preparation.preparequbit.yml
+++ b/api/qsharp/microsoft.quantum.preparation.preparequbit.yml
@@ -30,9 +30,10 @@ output:
   types:
   - isPrimitive: true
     uid: Unit
-ms.openlocfilehash: be4eb730bebd00531aaa49302578b23f4a52237b
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73226533"
+metadata:
+  ms.openlocfilehash: be4eb730bebd00531aaa49302578b23f4a52237b
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73226533"
