--- a/api/qsharp/microsoft.quantum.primitive.i.yml
+++ b/api/qsharp/microsoft.quantum.primitive.i.yml
@@ -25,9 +25,10 @@ output:
 functors:
 - Adjoint
 - Controlled
-ms.openlocfilehash: 042d63cc10fa4db5e475141b860c8d37ac321ada
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73223388"
+metadata:
+  ms.openlocfilehash: 042d63cc10fa4db5e475141b860c8d37ac321ada
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73223388"
