--- a/api/qsharp/microsoft.quantum.simulation.pauliblockencoding.yml
+++ b/api/qsharp/microsoft.quantum.simulation.pauliblockencoding.yml
@@ -34,9 +34,10 @@ output:
     - isPrimitive: true
       uid: Double
     - uid: microsoft.quantum.simulation.blockencodingreflection
-ms.openlocfilehash: 352ab71457601c38b22e93f706cb59f50bf24151
-ms.sourcegitcommit: 8becfb03eb60ba205c670a634ff4daa8071bcd06
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73216129"
+metadata:
+  ms.openlocfilehash: 352ab71457601c38b22e93f706cb59f50bf24151
+  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/05/2019
+  ms.locfileid: "73216129"
